[gd_scene load_steps=35 format=2]

[ext_resource path="res://GDScript/Board.gd" type="Script" id=1]
[ext_resource path="res://GDScript/Folder.gd" type="Script" id=2]
[ext_resource path="res://GDScript/Fade.gd" type="Script" id=3]
[ext_resource path="res://GDScript/Box.gd" type="Script" id=4]
[ext_resource path="res://Resources/PNG Exports/BasisBackground-16.png" type="Texture" id=5]
[ext_resource path="res://Resources/PNG Exports/LetterOpeningSpritesheet-BasicBackground-9.png" type="Texture" id=6]
[ext_resource path="res://GDScript/Letter.gd" type="Script" id=7]
[ext_resource path="res://GDScript/Trash.gd" type="Script" id=8]
[ext_resource path="res://Resources/PNG Exports/BoxOpeningSpriteSheet-BasicBackground-10.png" type="Texture" id=9]
[ext_resource path="res://Resources/m5x7.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://GDScript/OKButton.gd" type="Script" id=11]
[ext_resource path="res://GDScript/LetterFade.gd" type="Script" id=12]
[ext_resource path="res://Resources/PNG Exports/Arrow.png" type="Texture" id=13]
[ext_resource path="res://Resources/PNG Exports/AmountIndicator.png" type="Texture" id=14]
[ext_resource path="res://Scenes/TextArea.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Arrow.gd" type="Script" id=16]
[ext_resource path="res://Resources/PNG Exports/FolderFillingSpriteSheet-BasicBackground-15.png" type="Texture" id=17]
[ext_resource path="res://Resources/PNG Exports/BoardPinningSpriteSheet-BasicBackground-13.png" type="Texture" id=18]
[ext_resource path="res://Resources/PNG Exports/TrashFillingSpriteSheet-BasicBackground-12.png" type="Texture" id=19]
[ext_resource path="res://Resources/PNG Exports/LidOpeningSpriteSheet-BasicBackground-14.png" type="Texture" id=20]
[ext_resource path="res://Scenes/TableLetter.gd" type="Script" id=21]
[ext_resource path="res://Resources/PNG Exports/Letter.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 154, 90 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.5, 26 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34, 99.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.5, 22 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 62.5, 21 )

[sub_resource type="Animation" id=5]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.450625 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.784314 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "LetterFade"
tracks/0/type = "value"
tracks/0/path = NodePath("../Black4:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../TextBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../Arrow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../../LetterAmount:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "LetterFadeAway"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Black2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Black3:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../../Arrow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../../LetterAmount:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Black2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Black3:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Black4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../../Arrow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../../TextBox:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../../LetterAmount:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16.5, 12 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 46.5, 22 )

[node name="Paper Trail Scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BackgroundSprite" type="Sprite" parent="Background"]
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( 400, 225 )

[node name="Board" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BoardSprite" type="Sprite" parent="Board"]
position = Vector2( 400, 225 )
texture = ExtResource( 18 )
hframes = 2
vframes = 3

[node name="Board" type="Area2D" parent="Board/BoardSprite"]
position = Vector2( -400, -225 )
script = ExtResource( 1 )

[node name="BoardShape" type="CollisionShape2D" parent="Board/BoardSprite/Board"]
position = Vector2( 537, 104 )
shape = SubResource( 4 )

[node name="Trash" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TrashSprite" type="Sprite" parent="Trash"]
position = Vector2( 400, 225 )
texture = ExtResource( 19 )
hframes = 2
vframes = 3

[node name="Trash" type="Area2D" parent="Trash/TrashSprite"]
position = Vector2( -400, -225 )
script = ExtResource( 8 )

[node name="TrashShape" type="CollisionShape2D" parent="Trash/TrashSprite/Trash"]
position = Vector2( 378.5, 424 )
shape = SubResource( 2 )

[node name="Folder" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="FolderSprite" type="Sprite" parent="Folder"]
position = Vector2( 400, 225 )
texture = ExtResource( 17 )
hframes = 2
vframes = 3

[node name="Folder" type="Area2D" parent="Folder/FolderSprite"]
position = Vector2( -400, -225 )
z_index = 1
script = ExtResource( 2 )

[node name="FolderShape" type="CollisionShape2D" parent="Folder/FolderSprite/Folder"]
position = Vector2( 42, 208.5 )
shape = SubResource( 3 )

[node name="FolderLidSprite" type="Sprite" parent="Folder"]
position = Vector2( 400, 225 )
texture = ExtResource( 20 )
hframes = 2
vframes = 4

[node name="Letter" type="TextureRect" parent="."]
margin_left = 73.0
margin_right = 113.0
margin_bottom = 40.0

[node name="LetterSprite" type="Sprite" parent="Letter"]
texture = ExtResource( 6 )
offset = Vector2( 400, 225 )
hframes = 2
vframes = 3

[node name="Letter" type="Area2D" parent="Letter/LetterSprite"]
script = ExtResource( 7 )

[node name="LetterShape" type="CollisionShape2D" parent="Letter/LetterSprite/Letter"]
position = Vector2( 574.5, 428 )
shape = SubResource( 1 )

[node name="Box" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BoxSprite" type="Sprite" parent="Box"]
texture = ExtResource( 9 )
offset = Vector2( 400, 225 )
hframes = 2
vframes = 3

[node name="Box" type="Area2D" parent="Box/BoxSprite"]
script = ExtResource( 4 )

[node name="BoxShape" type="CollisionShape2D" parent="Box/BoxSprite/Box"]
position = Vector2( 145.5, 429 )
shape = SubResource( 6 )

[node name="Fade" type="AnimationPlayer" parent="."]
root_node = NodePath("Black")
anims/Fade = SubResource( 5 )
script = ExtResource( 3 )

[node name="Black" type="ColorRect" parent="Fade"]
visible = false
margin_right = 800.0
margin_bottom = 450.0
color = Color( 0, 0, 0, 1 )

[node name="LetterFade" type="AnimationPlayer" parent="."]
root_node = NodePath("LetterBorder/Black")
anims/LetterFade = SubResource( 10 )
anims/LetterFadeAway = SubResource( 12 )
anims/RESET = SubResource( 11 )
script = ExtResource( 12 )

[node name="LetterBorder" type="Node2D" parent="LetterFade"]
visible = false

[node name="Black" type="ColorRect" parent="LetterFade/LetterBorder"]
margin_left = 745.0
margin_right = 800.0
margin_bottom = 450.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="Black2" type="ColorRect" parent="LetterFade/LetterBorder"]
margin_right = 550.0
margin_bottom = 450.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="Black3" type="ColorRect" parent="LetterFade/LetterBorder"]
margin_left = 550.0
margin_right = 745.0
margin_bottom = 377.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="Black4" type="ColorRect" parent="LetterFade/LetterBorder"]
margin_left = 550.0
margin_top = 378.0
margin_right = 745.0
margin_bottom = 450.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="TextBox" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = 1

[node name="Border" type="ColorRect" parent="TextBox"]
margin_left = 200.0
margin_top = 125.0
margin_right = 610.0
margin_bottom = 335.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Inner" type="ColorRect" parent="TextBox/Border"]
margin_left = 5.0
margin_top = 5.0
margin_right = 405.0
margin_bottom = 205.0
mouse_filter = 2

[node name="Scroll" type="ScrollContainer" parent="TextBox/Border/Inner"]
margin_left = 3.0
margin_top = 3.0
rect_min_size = Vector2( 394, 170 )
scroll_horizontal_enabled = false

[node name="TextArea" type="ColorRect" parent="TextBox/Border/Inner/Scroll"]
margin_right = 380.0
margin_bottom = 171.0
rect_min_size = Vector2( 380, 171 )
mouse_filter = 2
color = Color( 0.996078, 0.866667, 1, 1 )
script = ExtResource( 15 )

[node name="Letter0" type="Label" parent="TextBox/Border/Inner/Scroll/TextArea"]
margin_left = 2.0
rect_min_size = Vector2( 380, 170 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Welcome to Paper Trail!

Let's get started by opening
your first letter!

Click on the letter down below.   c:

SECRET SCROLL CONTENT"

[node name="Letter1" type="Label" parent="TextBox/Border/Inner/Scroll/TextArea"]
visible = false
margin_left = 2.0
rect_min_size = Vector2( 380, 171 )
rect_clip_content = true
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Sentimental message <3"

[node name="Letter2" type="Label" parent="TextBox/Border/Inner/Scroll/TextArea"]
visible = false
margin_left = 2.0
rect_min_size = Vector2( 380, 171 )
rect_clip_content = true
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Plz send me $500 in bitcoin go to
microsoft.scam and send it now
thank you yes this is real"

[node name="Letter3" type="Label" parent="TextBox/Border/Inner/Scroll/TextArea"]
visible = false
margin_left = 2.0
rect_min_size = Vector2( 380, 171 )
rect_clip_content = true
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "IMPORTANT TO-DO ITEM"

[node name="OKBorder" type="ColorRect" parent="TextBox/Border/Inner"]
margin_left = 367.0
margin_top = 176.0
margin_right = 398.0
margin_bottom = 198.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="OK" type="ColorRect" parent="TextBox/Border/Inner"]
margin_left = 368.0
margin_top = 177.0
margin_right = 397.0
margin_bottom = 197.0
mouse_filter = 2
color = Color( 0.996078, 0.866667, 1, 1 )

[node name="Label" type="Label" parent="TextBox/Border/Inner/OK"]
margin_left = 3.0
margin_top = -4.0
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "OK"
autowrap = true

[node name="OKButton" type="Area2D" parent="TextBox/Border/Inner/OK"]
z_index = 1
z_as_relative = false
script = ExtResource( 11 )

[node name="ButtonShape" type="CollisionShape2D" parent="TextBox/Border/Inner/OK/OKButton"]
position = Vector2( 14.5, 10 )
shape = SubResource( 8 )

[node name="LetterAmount" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 697, 400 )
texture = ExtResource( 14 )

[node name="Amount" type="Label" parent="LetterAmount"]
margin_left = -5.0
margin_top = -15.0
margin_right = 8.0
margin_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "3"
align = 1
autowrap = true

[node name="BoxAmount" type="Sprite" parent="."]
visible = false
position = Vector2( 208, 400 )
texture = ExtResource( 14 )

[node name="Amount" type="Label" parent="BoxAmount"]
margin_left = -5.0
margin_top = -15.0
margin_right = 8.0
margin_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
autowrap = true

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 648, 348 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 13 )
script = ExtResource( 16 )

[node name="TableLetter" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LetterSprite" type="Sprite" parent="TableLetter"]
position = Vector2( 400, 225 )
texture = ExtResource( 22 )

[node name="TableLetter" type="Area2D" parent="TableLetter/LetterSprite"]
position = Vector2( -9, 96 )
script = ExtResource( 21 )

[node name="LetterShape" type="CollisionShape2D" parent="TableLetter/LetterSprite/TableLetter"]
shape = SubResource( 13 )

[node name="TransSprite" type="Sprite" parent="TableLetter"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 400, 225 )
texture = ExtResource( 22 )

[connection signal="input_event" from="Board/BoardSprite/Board" to="Board/BoardSprite/Board" method="_on_Board_input_event"]
[connection signal="input_event" from="Board/BoardSprite/Board" to="TableLetter/LetterSprite/TableLetter" method="_on_Board_input_event"]
[connection signal="input_event" from="Trash/TrashSprite/Trash" to="Trash/TrashSprite/Trash" method="_on_Trash_input_event"]
[connection signal="input_event" from="Trash/TrashSprite/Trash" to="TableLetter/LetterSprite/TableLetter" method="_on_Trash_input_event"]
[connection signal="input_event" from="Folder/FolderSprite/Folder" to="Folder/FolderSprite/Folder" method="_on_Folder_input_event"]
[connection signal="input_event" from="Folder/FolderSprite/Folder" to="TableLetter/LetterSprite/TableLetter" method="_on_Folder_input_event"]
[connection signal="input_event" from="Letter/LetterSprite/Letter" to="Letter/LetterSprite/Letter" method="_on_Letter_input_event"]
[connection signal="input_event" from="Letter/LetterSprite/Letter" to="TableLetter/LetterSprite/TableLetter" method="_on_Letter_input_event"]
[connection signal="input_event" from="Box/BoxSprite/Box" to="Box/BoxSprite/Box" method="_on_Box_input_event"]
[connection signal="input_event" from="Box/BoxSprite/Box" to="TableLetter/LetterSprite/TableLetter" method="_on_Box_input_event"]
[connection signal="animation_finished" from="Fade" to="Fade" method="_on_Fade_animation_finished"]
[connection signal="input_event" from="TextBox/Border/Inner/OK/OKButton" to="TextBox/Border/Inner/OK/OKButton" method="_on_OKButton_input_event"]
[connection signal="input_event" from="TableLetter/LetterSprite/TableLetter" to="TableLetter/LetterSprite/TableLetter" method="_on_TableLetter_input_event"]
